Add back argument to allow java security manager
Bug: 331671148
Test: Existing
Change-Id: I988baaca75e34274dd5f479fc265e6347806812c