@@ -22,6 +22,7 @@ import com.android.tools.preview.screenshot.services.AnalyticsService
 import com.android.tools.render.compose.readComposeScreenshotsJson
 import com.android.utils.FileUtils
 import org.gradle.api.DefaultTask
+import org.gradle.api.JavaVersion
 import org.gradle.api.file.ConfigurableFileCollection
 import org.gradle.api.file.Directory
 import org.gradle.api.file.DirectoryProperty
@@ -135,6 +136,10 @@ abstract class PreviewScreenshotRenderTask : DefaultTask(), VerificationTask {
         if (classpathJars.none { regex.containsMatchIn(it) }) {
             throw RuntimeException("Missing required runtime dependency. Please add androidx.compose.ui:ui-tooling to your testing module's dependencies.")
         }
+        val javaSecManagerArg: String? = if (JavaVersion.toVersion(javaLauncher.get().metadata.javaRuntimeVersion).isCompatibleWith(JavaVersion.VERSION_17))
+            "-Djava.security.manager=allow"
+        else
+            null
 
         val fontsDir = sdkFontsDir.orNull?.asFile?.absolutePath
         configureInput(
@@ -155,6 +160,7 @@ abstract class PreviewScreenshotRenderTask : DefaultTask(), VerificationTask {
             parameters.toolJarPath.setFrom(screenshotCliJar)
             parameters.outputDir.set(outputDir)
             parameters.layoutlibJar.setFrom(layoutlibJar)
+            parameters.javaSecManagerArgument.set(javaSecManagerArg)
         }
 
     }
